@@ -28,6 +28,10 @@ require 'motion/project/builder'
 module Motion; module Project
   class Builder
     def build(config, platform, opts)
+      unless ENV['RM_TARGET_BUILD']
+        App.fail "Framework targets must be built from an application project"
+      end
+
       @host_app_dir = ENV['RM_TARGET_HOST_APP_PATH']
       config.sdk_version = ENV['RM_TARGET_SDK_VERSION'] if ENV['RM_TARGET_SDK_VERSION']
       config.deployment_target = ENV['RM_TARGET_DEPLOYMENT_TARGET'] if ENV['RM_TARGET_DEPLOYMENT_TARGET']
